done open spi spec file
