# frontend/openapi.json
@@ -4,9 +4,22 @@
     "title": "FastAPI",
     "version": "0.1.0"
   },
+  "servers": [
+    {
+      "url": "http://localhost:8000",
+      "description": "Local development server"
+    },
+    {
+      "url": "https://api.example.com",
+      "description": "Production server"
+    }
+  ],
   "paths": {
     "/api/v1/todos/": {
       "get": {
+        "tags": [
+          "todos"
+        ],
         "summary": "List All Todos",
         "operationId": "list_all_todos_api_v1_todos__get",
         "responses": {
@@ -27,6 +40,9 @@
         }
       },
       "post": {
+        "tags": [
+          "todos"
+        ],
         "summary": "Create Todo",
         "operationId": "create_todo_api_v1_todos__post",
         "requestBody": {
@@ -65,6 +81,9 @@
     },
     "/api/v1/todos/{todo_id}": {
       "get": {
+        "tags": [
+          "todos"
+        ],
         "summary": "Get Todo",
         "operationId": "get_todo_api_v1_todos__todo_id__get",
         "parameters": [
@@ -102,6 +121,9 @@
         }
       },
       "put": {
+        "tags": [
+          "todos"
+        ],
         "summary": "Update Todo",
         "operationId": "update_todo_api_v1_todos__todo_id__put",
         "parameters": [
@@ -149,6 +171,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "todos"
+        ],
         "summary": "Delete Todo",
         "operationId": "delete_todo_api_v1_todos__todo_id__delete",
         "parameters": [
